fixed white-header-text to no longer be off center

--- a/stylesheets/styles-main.css
+++ b/stylesheets/styles-main.css
@@ -292,7 +292,6 @@ page and in its custom UI elements.
 .white-header-text {
   font-family: "Yeseva One", serif;
   color: white;
-  padding-bottom: 5px;
   margin: 0;
 }
 
